Fixes category scroll on mobile

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -481,3 +481,16 @@ header {
   background-color: var(--color-info) !important;
   color: var(--color-danger) !important;
 }
+
+#categories-header {
+  display: flex;
+  overflow-x: auto;
+  white-space: nowrap;
+  -webkit-overflow-scrolling: touch; /* for momentum scrolling on iOS */
+}
+// @media (max-width: 768px) {
+//   .category-button {
+//     padding: 10px; /* Example padding, adjust as needed */
+//     font-size: 16px; /* Example font size, adjust as needed */
+//   }
+// }
